# menu-api

./: .cruft.json  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  check_database_url.py  check_tables.py  coverage.xml  docker-compose.yaml  fix_alembic.py  pyproject.toml  pytest.ini
.github/workflows/: lint.yml  test.yml
app/: __init__.py  main.py
app/agents/: agent.py
app/agents/utils/: nodes.py
app/api/: chat.py  ingredient.py  recipe.py
app/core/: config.py  llm_factory.py  logger.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 35ed5f4d13c8_update.py  4149db9395e3_update.py  5f2e3f4a739d_align_with_fastapi_structure.py  84319ed0bb57_initial.py  85544f481e8c_align_with_fastapi_structure.py  968733bb4fd0_update.py  a6fa6364b745_update.py  a7936e341059_create_tables.py  b693178ffef1_initial.py  c3f51f87a6d9_initial.py
app/llm/: client.py
app/schemas/: chat.py  llm.py  recipe.py
app/services/: ingredient_service.py  recipe_service.py
app/utils/: visualize_graph.py
scripts/: clean.sh  done.sh  format.sh  lint.sh  pre-commit.sh  seed_data.py  test.sh  update.sh  update_db.sh
tests/: conftest.py  test_agent.py  test_api_chat.py  test_api_ingredient.py  test_api_recipe.py  test_config.py  test_db_models.py  test_db_session.py  test_ingredient_service.py  test_llm_client.py  test_llm_factory.py  test_recipe_service.py  test_schema_chat.py  test_scheme_recipe.py
